--- a/templates/error.html
+++ b/templates/error.html
@@ -1,18 +1,20 @@
 {% extends "base.html" %} {% block content %}
-<div class="error_edit_delete">
-    {{error_edit}}
+<div class="error_page">
+    {{error}}
 </div>
-<div class="error_edit_delete">
-    {{error_delete}}
-</div>
-<div class="error_like">
-    {{error_like}}
-</div>
-<div class="error_like">
+
+<div class="error_page">
     {{error_comment}}
 </div>
+
 <br>
-<a href="/blog" class="button_edit_delete">
-    <button class="go_back">Go back</button>
-</a>
+{% if post_id %}
+    <a href="/blog/{{post_id}}/comment" class="button_edit_delete">
+        <button class="go_back">Go back</button>
+    </a>
+{% else %}
+    <a href="/blog" class="button_edit_delete">
+        <button class="go_back">Go back</button>
+    </a>
+{% endif %}
 {% endblock %}
