--- a/static/main.css
+++ b/static/main.css
@@ -147,16 +147,10 @@ textarea {
     font-size: 18px;
 }
 
-.error_like {
+.error_page {
     text-align: center;
     color: red;
-    font-size: 18px;
-}
-
-.error_edit_delete {
-    text-align: center;
-    color: red;
-    font-size: 18px;
+    font-size: 22px;
 }
 
 .link-login-div {
@@ -245,16 +239,51 @@ textarea {
     font-family: monospace;
 }
 
-.comments {
+#edit-comment-txt {
+    width: 100%;
+    height: 100%;
+    font-size: 18px;
+    padding: 2px;
+    margin: 10px, 10px, 10px, 0;
+    font-family: monospace;
+
+}
+
+.comment-list {
     font-size: 18px;
     padding: 3px, 3px, 3px, 0;
     margin-bottom: 5px;
     width: 60%;
     margin: 0 auto;
+    border:1px solid #e5e5e5;
+    background-color:#f6f7f9
 }
+
+.comment-edit-form {
+  display: none; }
 
 .commented-by {
     color: #365899;
+    margin:2px;
+}
+
+
+
+.p-comment {
+margin:0px;
+
+}
+
+.comment-link-edit {
+  font-size:14px;
+  margin:3px;
+  text-align:right;
+}
+
+.comment-link-delete {
+  font-size:14px;
+  margin:3px;
+  text-align:right;
 }
 
 #input-post {
@@ -304,11 +333,16 @@ button:focus {
     display: block;
 }
 
+.edit-button-budle {
+
+margin:10px 0  20px 0;
+}
+
+
 .post-button {
     width: 100px;
     font-size: 13px;
     margin: 20px;
-    text-align: center;
     border: 1px solid #666;
     border-radius: 25px;
     box-shadow: 0px 2px 5px #888888;
@@ -317,6 +351,25 @@ button:focus {
     cursor: pointer;
     margin-bottom: 10px;
 }
+
+.cancel-button {
+
+    width: 100px;
+    font-size: 13px;
+    margin: 20px;
+    border: 1px solid #666;
+    border-radius: 25px;
+    box-shadow: 0px 2px 5px #888888;
+    background-color: #00b3e4;
+    color: white;
+    cursor: pointer;
+    margin-bottom: 10px;
+    float:left:
+
+}
+
+
+
 
 .go_back {
     font-size: 24px;
@@ -329,6 +382,10 @@ button:focus {
 
 #newcomment {
     margin-top: 10px;
+    font-size: 18px;
+    padding: 3px, 3px, 3px, 0;
+    margin-bottom: 5px;
+    width: 100%;
 }
 
 .input-title {
@@ -340,3 +397,23 @@ button:focus {
     font-style: bold;
     margin-bottom: 20px;
 }
+
+/*linh
+.comments {
+  border: 1px solid #cdc7da;
+  margin-bottom: 0.33em; }
+
+.comment-placeholder {
+  color: #cdc7da;
+  padding: 0.33em 0; }
+
+.comment-input-form {
+  display: none; }
+
+.comment-input,
+.form-input {
+  margin-top: 0.33em;
+  padding: 0.33em;
+  border: 1px solid #cddac7;
+  font-weight: 300; }
+*/
