--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="/static/main.css">
     <title>Who are you?</title>
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <!--<script src="http://code.jquery.com/jquery.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="/static/comment.js"></script>
 </head>
 
 <body>
@@ -34,7 +36,7 @@
     <!--to display all the posts-->
     {% if posts %}
     <div>
-        {% for p in posts %} {{ p.render() | safe }}
+        {% for p in posts %} {{ p.render(user) | safe }}
         <br>
         <br> {% endfor %}
     </div>
